@@ -1,0 +1,85 @@
+
+package Paws::StorageGateway::AddTagsToResource {
+  use Moose;
+  has ResourceARN => (is => 'ro', isa => 'Str', required => 1);
+  has Tags => (is => 'ro', isa => 'ArrayRef[Paws::StorageGateway::Tag]', required => 1);
+
+  use MooseX::ClassAttribute;
+
+  class_has _api_call => (isa => 'Str', is => 'ro', default => 'AddTagsToResource');
+  class_has _returns => (isa => 'Str', is => 'ro', default => 'Paws::StorageGateway::AddTagsToResourceOutput');
+  class_has _result_key => (isa => 'Str', is => 'ro');
+}
+1;
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::StorageGateway::AddTagsToResource - Arguments for method AddTagsToResource on Paws::StorageGateway
+
+=head1 DESCRIPTION
+
+This class represents the parameters used for calling the method AddTagsToResource on the 
+AWS Storage Gateway service. Use the attributes of this class
+as arguments to method AddTagsToResource.
+
+You shouln't make instances of this class. Each attribute should be used as a named argument in the call to AddTagsToResource.
+
+As an example:
+
+  $service_obj->AddTagsToResource(Att1 => $value1, Att2 => $value2, ...);
+
+Values for attributes that are native types (Int, String, Float, etc) can passed as-is (scalar values). Values for complex Types (objects) can be passed as a HashRef. The keys and values of the hashref will be used to instance the underlying object.
+
+=head1 ATTRIBUTES
+
+=head2 B<REQUIRED> ResourceARN => Str
+
+  
+
+The Amazon Resource Name (ARN) of the resource you want to add tags to.
+
+
+
+
+
+
+
+
+
+
+=head2 B<REQUIRED> Tags => ArrayRef[Paws::StorageGateway::Tag]
+
+  
+
+The key-value pair that represents the tag you want to add to the
+resource. The value can be an empty string.
+
+Valid characters for key and value are letters, spaces, and numbers
+representable in UTF-8 format, and the following special characters: +
+- = . _ : / @.
+
+
+
+
+
+
+
+
+
+
+
+
+=head1 SEE ALSO
+
+This class forms part of L<Paws>, documenting arguments for method AddTagsToResource in L<Paws::StorageGateway>
+
+=head1 BUGS and CONTRIBUTIONS
+
+The source code is located here: https://github.com/pplu/aws-sdk-perl
+
+Please report bugs to: https://github.com/pplu/aws-sdk-perl/issues
+
+=cut
+
