@@ -1,0 +1,6 @@
+package Paws::StorageGateway::Tag {
+  use Moose;
+  has Key => (is => 'ro', isa => 'Str', required => 1);
+  has Value => (is => 'ro', isa => 'Str', required => 1);
+}
+1;
