@@ -2,6 +2,7 @@
 package Paws::StorageGateway::UpdateGatewayInformationOutput {
   use Moose;
   has GatewayARN => (is => 'ro', isa => 'Str');
+  has GatewayName => (is => 'ro', isa => 'Str');
 
 }
 
@@ -14,6 +15,9 @@ Paws::StorageGateway::UpdateGatewayInformationOutput
 =head1 ATTRIBUTES
 
 =head2 GatewayARN => Str
+
+  
+=head2 GatewayName => Str
 
   
 
